# test-action-style-guide

./: .gitignore  README.md  _config.yml  _toc.yml  intro.md  pyproject.toml  report-qestyle(all).md
.github/workflows/: test-style-checker.yml
_static/: .gitkeep
lectures/: markov_chains_jax.annotated.md  markov_chains_jax.md  qestyle(all)-markov_chains_jax.md  test-lecture-clean.md  test-lecture-violations.md
scripts/: find_multisentence.py  last_response.md  test_rule_prompt.py
