[project]
name = "test-action-style-guide"
version = "0.1.0"
description = "Test repository for action-style-guide"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter-book>=1.0.0",
    "sphinx-proof>=0.1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
